--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
         "chai": "^2.3.0",
         "karma": "^0.12.31",
         "karma-chai": "^0.1.0",
+        "karma-chrome-launcher": "^0.1.8",
         "karma-mocha": "^0.1.10",
         "karma-phantomjs-launcher": "^0.1.4",
+        "karma-phantomjs-shim": "^1.0.0",
         "mocha": "^2.2.4"
     }
 }
