--- a/package.json
+++ b/package.json
@@ -1,36 +1,43 @@
 {
-    "name": "chefling-di-js",
-    "version": "0.1.0",
-    "description": "Chefling is a dependency injection container for JavaScript.",
-    "author": "Cooking Fox",
-    "license": "Apache 2.0",
-    "homepage": "https://github.com/cookingfox/chefling-di-js",
-    "keywords": [
-        "dependency",
-        "injection",
-        "container",
-        "reflection"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/cookingfox/chefling-di-js.git"
-    },
-    "bugs": {
-        "url": "https://github.com/cookingfox/chefling-di-js/issues"
-    },
-    "scripts": {
-        "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS"
-    },
-    "devDependencies": {
-        "chai": "^2.3.0",
-        "karma": "^0.12.31",
-        "karma-chai": "^0.1.0",
-        "karma-chrome-launcher": "^0.1.8",
-        "karma-firefox-launcher": "^0.1.4",
-        "karma-mocha": "^0.1.10",
-        "karma-phantomjs-launcher": "^0.1.4",
-        "karma-phantomjs-shim": "^1.0.0",
-        "karma-safari-launcher": "^0.1.1",
-        "mocha": "^2.2.4"
-    }
+  "name": "chefling-di-js",
+  "version": "0.1.0",
+  "description": "Chefling is a dependency injection container for JavaScript.",
+  "author": "Cooking Fox",
+  "license": "Apache 2.0",
+  "homepage": "https://github.com/cookingfox/chefling-di-js",
+  "keywords": [
+    "dependency",
+    "injection",
+    "container",
+    "reflection"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cookingfox/chefling-di-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cookingfox/chefling-di-js/issues"
+  },
+  "scripts": {
+    "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS"
+  },
+  "devDependencies": {
+    "chai": "^2.3.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-umd": "^2.3.3",
+    "grunt-version": "^1.0.0",
+    "karma": "^0.12.31",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.8",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-phantomjs-shim": "^1.0.0",
+    "karma-safari-launcher": "^0.1.1",
+    "mocha": "^2.2.4"
+  }
 }
