--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
         "bower_components",
         "node_modules",
         "test",
-        "tests",
+        "tools",
         "Gruntfile.js",
         "bower.json",
         "karma.conf.js",
