--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-    "name": "Chefling DI for JavaScript",
-    "version": "0.1.1",
+    "name": "chefling",
+    "version": "0.2.0",
     "main": "dist/chefling.js",
     "homepage": "https://github.com/cookingfox/chefling-di-js",
     "authors": [
