--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chefling-di-js",
-  "version": "0.1.1",
+  "name": "chefling",
+  "version": "0.2.0",
   "description": "Chefling is a dependency injection container for JavaScript.",
   "author": "Cooking Fox",
   "license": "Apache 2.0",
