--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Cooking Fox",
   "license": "Apache 2.0",
   "homepage": "https://github.com/cookingfox/chefling-di-js",
+  "main": "dist/chefling.js",
   "keywords": [
     "dependency",
     "injection",
